added nav, moz shadows

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 </div>
 
 <div id="content">
+    <div class="nav">
+        <a href="/">home</a>
+        <a href="/">home</a>
+        <a href="/">home</a>
+    </div>
     <div id="demo">
         <div id="show1">
             <img src="images/show1.jpg"/>
