oh its all glassy glassy, kde inspired

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <a href="#">PyMos guide</a>
         <a href="http://github.com/ideamonk/PyMos/downloads">downloads</a>
         <a href="http://github.com/ideamonk/PyMos/">source</a>
+        <a href="http://github.com/ideamonk/PyMos/issues">feedback</a>
         <a href="#">about</a>
     </div>
     <div id="demo">
@@ -55,9 +56,25 @@
             </div>
         </div>
     </div>
+    <div class="text">
+    <div class="textclose">
+        <h2>A few words...</h2>
+        <p>
+            Ever seen <a href="http://www.flickr.com/photos/panorama_paul/3464674639/">some</a> <a href="http://www.flickr.com/photos/krazydad/sets/874417/">of</a> <a href="http://www.flickr.com/groups/photomosaic/pool/">these</a> amazing <a href="http://en.wikipedia.org/wiki/Photographic_mosaic">Photographic Mosaics</a>?
+            <br/>
+            Why <a href="http://www.picturemosaics.com/products/">pay a price</a> to get mosaics done, when you can do it for <strong>free</strong> with a little bit of <a href="http://www.python.org/">Python</a>?
+            <br/>
+            Why not <a href="http://github.com/ideamonk/PyMos/downloads"><strong>grab</strong></a> the latest copy of PyMos and just get it done!
+            <br/>
+            Do read the <a href="guide.html"><strong>guide</strong></a> on how to use it and more importantly, have fun :)
+        </p>
+    </div>
+    </div>
 </div>
 
 <div id="footer">
+    <span style="display:block; height:40px"></span>
+    <p>&copy; Abhishek Mishra and Yuvi Panda [2009:]</p>
 </div>
 
 </body>
