almost done, haven't done spell checks yet, neither xbrowser test

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 <div id="header">
     <div id="centerrific">
-        <a href="/">
+        <a href="index.html">
             <img src="images/logo.jpg"/>
         </a>
         <p class="slogan">
@@ -43,12 +43,12 @@
 
 <div id="content">
     <div class="nav">
-        <a href="http://ideamonk.github.com/PyMos">home</a>
-        <a href="#">PyMos guide</a>
+        <a href="index.html">home</a>
+        <a href="guide.html">PyMos guide</a>
         <a href="http://github.com/ideamonk/PyMos/downloads">downloads</a>
         <a href="http://github.com/ideamonk/PyMos/">source</a>
         <a href="http://github.com/ideamonk/PyMos/issues">feedback</a>
-        <a href="#">about</a>
+        <a href="about.html">about</a>
     </div>
     <div id="demo">
         <div id="show1">
@@ -76,6 +76,9 @@
     <span style="display:block; height:40px"></span>
     <p>&copy; Abhishek Mishra and Yuvi Panda [2009:]</p>
 </div>
-
+<!--
+Web design by Abhishek Mishra < ideamonk at gmail.com >
+Have some web-dev/design work? checkout our website - http://w3ninjas.com
+-->
 </body>
 </html>
