added analytics js

--- a/guide.html
+++ b/guide.html
@@ -205,5 +205,16 @@ pymos [-h] [-z ZOOM] [-ts THUMBSIZE] [-f FUZZFACTOR] [-v] [-nc]
 Web design by Abhishek Mishra < ideamonk at gmail.com >
 Have some web-dev/design work? checkout our website - http://w3ninjas.com    
 -->
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-11533820-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
 </body>
 </html>
