added new easy_install information

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     </div>
     <div class="text">
     <div class="textclose">
+        <h2>Get PyMos now!</h2>
+        <br/>
+        <div class="minitext">
+            <pre>$ sudo <a href="http://pypi.python.org/pypi/setuptools#installation-instructions" title="the best way to get python packages">easy_install</a> pymos</pre>
+        </div>
+        <br/>
         <h2>A few words...</h2>
         <p>
             Ever seen <a href="http://www.flickr.com/photos/panorama_paul/3464674639/">some</a> <a href="http://www.flickr.com/photos/krazydad/sets/874417/">of</a> <a href="http://www.flickr.com/groups/photomosaic/pool/">these</a> amazing <a href="http://en.wikipedia.org/wiki/Photographic_mosaic">Photographic Mosaics</a>?
