fixed unclosed div

--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@ Feel free to use our code, fork it whenever you feel like.
     </div>
     </div>
 </div>
+</div>
 
 <div id="footer">
     <span style="display:block; height:40px"></span>
