--- a/guide.html
+++ b/guide.html
@@ -204,6 +204,7 @@ pymos [-h] [-z ZOOM] [-ts THUMBSIZE] [-f FUZZFACTOR] [-v] [-nc]
     </div>
     </div>
 </div>
+</div>
 
 <div id="footer">
     <span style="display:block; height:40px"></span>
